1. Returned scrollbar everywhere. 2. Now dates render just right (with zeros if needed). 3. Click-outside fixed in profile's settings

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
     margin: 0;
     padding: 0;
 
-    scrollbar-width: none;
+    /* scrollbar-width: none; */
 }
 
 html, body, #app {
@@ -29,7 +29,7 @@ body {
 }
 
 .scroll::-webkit-scrollbar {
-    width: 10px;
+    width: 12px;
 }
 
 .scroll::-webkit-scrollbar-track {
@@ -39,6 +39,7 @@ body {
 .scroll::-webkit-scrollbar-thumb {
     background-color: #606060;
     border-radius: 0;
+    height: 50px;
 }
 
 .scroll::-webkit-scrollbar-thumb:hover {
